# GlobOptAlgorithms

./: CMakeLists.txt  LICENSE  README.md  build.bat
qml/: main.qml
src/: Algorithms.cpp  Algorithms.h  MainPresenter.cpp  MainPresenter.h  main.cpp
